[package]
name = "ssd1362"
version = "0.1.0"
authors = ["Jitter"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.embedded-hal]
version = "0.2.3"
features = ["unproven"]

[dependencies.embedded-graphics]
version = "0.6.0-alpha.3"

[dev-dependencies]
cortex-m = "0.6.2"
cortex-m-rt = "0.6.12"
panic-halt = "0.2.0"

[dev-dependencies.stm32g0xx-hal]
features = ["stm32g07x", "rt"]
version = "0.0.7"

